# my-calc

./: .gitignore  CMakeLists.txt
src/: custom-exceptions.cpp  custom-exceptions.hpp  main.cpp
